// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentReference documentDetails works correctly 1`] = `
<div
  className="fhir-ui__Value"
>
  <label
    className="fhir-ui__Value-label"
  >
    Document type
  </label>
  <div>
    <Coding
      coding={
        Object {
          "code": "34108-1",
          "display": "Outpatient Note",
          "system": "http://loinc.org",
        }
      }
    >
      <div
        className="fhir-datatype__Coding"
      >
        <span
          className="fhir-datatype__Coding__title"
        >
          Outpatient Note
        </span>
          
        <span
          className="fhir-datatype__Coding__code"
          title="http://loinc.org"
        >
          (
          34108-1
          )
        </span>
      </div>
    </Coding>
  </div>
</div>
`;

exports[`DocumentReference documentDetails works correctly 2`] = `
<div
  className="fhir-ui__Value"
>
  <label
    className="fhir-ui__Value-label"
  >
    Security label
  </label>
  <div>
    <Coding
      coding={
        Object {
          "code": "V",
          "display": "very restricted",
          "system": "http://terminology.hl7.org/CodeSystem/v3-Confidentiality",
        }
      }
    >
      <div
        className="fhir-datatype__Coding"
      >
        <span
          className="fhir-datatype__Coding__title"
        >
          very restricted
        </span>
          
        <span
          className="fhir-datatype__Coding__code"
          title="http://terminology.hl7.org/CodeSystem/v3-Confidentiality"
        >
          (
          V
          )
        </span>
      </div>
    </Coding>
  </div>
</div>
`;

exports[`DocumentReference documentDetails works correctly 3`] = `
<div
  className="fhir-ui__Value"
>
  <label
    className="fhir-ui__Value-label"
  >
    Created at
  </label>
  <div>
    <span>
      2005-12-23
    </span>
  </div>
</div>
`;

exports[`DocumentReference documentDetails works correctly 4`] = `
<div
  className="fhir-ui__Value"
>
  <label
    className="fhir-ui__Value-label"
  >
    Event
  </label>
  <div>
    <Coding
      coding={
        Object {
          "code": "T-D8200",
          "display": "Arm",
          "system": "http://ihe.net/xds/connectathon/eventCodes",
        }
      }
    >
      <div
        className="fhir-datatype__Coding"
      >
        <span
          className="fhir-datatype__Coding__title"
        >
          Arm
        </span>
          
        <span
          className="fhir-datatype__Coding__code"
          title="http://ihe.net/xds/connectathon/eventCodes"
        >
          (
          T-D8200
          )
        </span>
      </div>
    </Coding>
  </div>
</div>
`;

exports[`DocumentReference documentDetails works correctly 5`] = `
<div
  className="fhir-ui__Value"
>
  <label
    className="fhir-ui__Value-label"
  >
    Facility
  </label>
  <div>
    <Coding
      coding={
        Object {
          "code": "Outpatient",
          "display": "Outpatient",
          "system": "http://www.ihe.net/xds/connectathon/healthcareFacilityTypeCodes",
        }
      }
    >
      <div
        className="fhir-datatype__Coding"
      >
        <span
          className="fhir-datatype__Coding__title"
        >
          Outpatient
        </span>
          
        <span
          className="fhir-datatype__Coding__code"
          title="http://www.ihe.net/xds/connectathon/healthcareFacilityTypeCodes"
        >
          (
          Outpatient
          )
        </span>
      </div>
    </Coding>
  </div>
</div>
`;

exports[`DocumentReference documentDetails works correctly 6`] = `
<div
  className="fhir-ui__Value"
>
  <label
    className="fhir-ui__Value-label"
  >
    Practice Setting
  </label>
  <div>
    <Coding
      coding={
        Object {
          "code": "General Medicine",
          "display": "General Medicine",
          "system": "http://www.ihe.net/xds/connectathon/practiceSettingCodes",
        }
      }
    >
      <div
        className="fhir-datatype__Coding"
      >
        <span
          className="fhir-datatype__Coding__title"
        >
          General Medicine
        </span>
          
        <span
          className="fhir-datatype__Coding__code"
          title="http://www.ihe.net/xds/connectathon/practiceSettingCodes"
        >
          (
          General Medicine
          )
        </span>
      </div>
    </Coding>
  </div>
</div>
`;

exports[`DocumentReference documentDetails works correctly 7`] = `
<div
  className="fhir-ui__Value"
>
  <label
    className="fhir-ui__Value-label"
  >
    Period
  </label>
  <div>
    2004-12-22
     - 
    2004-12-22
  </div>
</div>
`;

exports[`DocumentReference documentDetails works correctly 8`] = `
<a
  className=""
  download="Physical.urn:ihe:pcc:handp:2008"
  href="urlObject"
>
  Download
</a>
`;

exports[`DocumentReference documentDetails works correctly: table tr 1`] = `"S.noNameFormatPreview/Download"`;

exports[`DocumentReference documentDetails works correctly: table tr 2`] = `"1History and Physical Specificationurn:ihe:pcc:handp:2008Download"`;
